--- a/Corona3/templates/Corona3/minData.html
+++ b/Corona3/templates/Corona3/minData.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-4">
                 <div class="form-group">
-                    <label for="basicInput">Google Map Code Plus </label> วิธีหา
+                    <label for="basicInput">Google Map Code Plus </label> <a href = "{% static 'assets/images/mapPatient.png'%}" target = "new">วิธีหา</a>
                     {{ form.GoogleMap }}
                 </div>
             </div>
