--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>
-                                        <a target = "_blank" href = "{% url 'Corona3:BasicForm' %}">ส่งข้อมูล Corona3</a> 
+                                        <a target = "_blank" href = "{% url 'Corona3:minForm' %}">ส่งข้อมูล Corona3</a> 
                                     </label>
                                 </div>
                                 {% include "DisplayMessage.html" %}
