--- a/templates/_base.html
+++ b/templates/_base.html
@@ -98,6 +98,14 @@
                         </a>
                     </li>
 
+                    <li class="label">ข้อมูล Corona3 </li>
+                    
+                    <li>
+                        <a href="{% url 'Corona3:list' %}">
+                            <i class="fa fa-hospital" aria-hidden="true"></i></i> รายชื่อผู้ป่วย Corona 3  ทั้งหมด
+                        </a>
+                    </li>
+
                     {% comment %} 
                     <li>
                         <a href="{% url 'Patient:Detail' 1 %}">
