640818:1332 - add link in login page

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -102,7 +102,7 @@
                     
                     <li>
                         <a href="{% url 'Corona3:list' %}">
-                            <i class="fa fa-hospital" aria-hidden="true"></i></i> รายชื่อผู้ป่วย Corona 3  ทั้งหมด
+                            <i class="fa fa-hospital" aria-hidden="true"></i></i> รายชื่อผู้ป่วย Corona 3
                         </a>
                     </li>
 
